<!--
  Copyright 2013 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_large" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- suppress AndroidLintUseCompoundDrawables -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                style="@style/HelpText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_weight="1"
                android:text="@string/story_4"
                android:textSize="@dimen/font_size_small" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@null"
                android:src="@drawable/qrcode"
                 />
        </LinearLayout>

        <TextView
            style="@style/HelpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/story_5"
            android:textSize="@dimen/font_size_small" />

        <TextView
            android:id="@+id/textView"
            style="@style/HelpText.Heading"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/story_6" />
    </LinearLayout>

</ScrollView>