<!--
  Copyright 2013 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutcluetwotag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ClueActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/instructionsHeading"
        android:layout_below="@+id/heading"
        android:background="@drawable/imageback"
        android:scaleType="centerInside"
        android:src="@drawable/dog" />

    <TextView
        android:id="@+id/heading"
        style="@style/Heading"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerVertical="true"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:text="@string/heading"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/instructionsHeading"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/displayText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:text="@string/instructions"
        android:textColor="@color/white"
        android:textSize="23sp" />


    <ProgressBar
        android:id="@+id/clue_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/displayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/clueStatus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/instruction_text_here"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:typeface="sans" />

    <LinearLayout
        android:id="@+id/clueStatus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/tag_container_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tag_1_notfound_marker"
                style="@style/TagMarker"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/one"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/tag_1_found_marker"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/red_circle"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tag_container_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tag_2_notfound_marker"
                style="@style/TagMarker"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/two"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/tag_2_found_marker"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/red_circle"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>


    <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/btnScan"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="right|end|bottom"
        android:elevation="5dp"
        android:scaleType="center"
        android:src="@drawable/ic_glaquidara"
        app:borderWidth="0dp"
        android:layout_marginBottom="-30dp"
        android:layout_marginRight="16dp"
        android:layout_above="@+id/instructionsHeading"
        android:layout_alignRight="@+id/instructionsHeading"
        android:layout_alignEnd="@+id/instructionsHeading" />


</RelativeLayout>